# noter-text-extraction

./: .gitignore  README.md  pyproject.toml
docs/: extraction_strategy.md
scripts/: audit_extraction.py  extract_batch.py  extract_orgnr.py  fingerprint_batch.py  morning_summary.py  run_batch.sh  run_idempotent.py  run_phase1.py  run_phase1_v2.py
src/noter_text_extraction/: __init__.py  amount_normalizer.py  canonical_schema.py  classifier.py  config.py  deep_dive.py  fingerprint.py  full_pdf_orchestrator.py  kv_extractor.py  nokkeltall_validator.py  note_segmenter.py  ocr.py  orchestrator.py  pdf_loader.py  setup_detector.py
src/noter_text_extraction/extractors/: __init__.py  generell_info.py  primary_statement.py  primary_statement_konsern.py
tests/: test_amount_normalizer.py
